# moveit_web

./: .gitignore  README.md  kinematic-analysis.html  kinematic-analysis.js  kinetic-analysis.html  moveit_web.rosinstall
django/: run.sh  runserver.py
django/moveit/: bridge.py  models.py  socket.py  views.py
django/moveit/fixtures/: initial_data.json
django/server/: settings.py  urls.py  views.py
django/server/templates/: login.html
django/static/: index.html  table.stl  urdf.html  urdf.js
django/static/js/: main.js  moveit-goal.js
django/static/meshes/: table_4legs.dae  table_4legs.stl
django/static/old/: kinematic-analysis.js  urdf.html
django/static/old/superstretch/: index.html
django/static/old/superstretch/css/: main-styles.css
django/static/old/superstretch/scripts/: DD_config.js
experiments/: move_web.py  plan_base.py  plan_standalone.py
moveit_web/: CMakeLists.txt  package.xml
moveit_web/launch/: everything.launch  rviz.launch  standalone.launch
robot_state/: CMakeLists.txt  package.xml  setup.py
robot_state/scripts/: test.py
robot_state/src/: wrap_python_robot_state.cpp
webui/: kinematic-analysis.html  kinematic-analysis.js
