<package>
  <name>moveit_web_robot_state</name>
  <version>0.0.1</version>
  <description>Python wrapper for MoveIt! Web pakcage to perform back-end robot state operations</description>

  <author email="jcerruti@creativa77.com.ar">Julian Cerruti</author>
  <maintainer email="jcerruti@creativa77.com.ar">Julian Cerruti</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/creativa77/moveit_web/issues</url>
  <url type="repository">https://github.com/creativa77/moveit_web</url>

  <buildtool_depend>catkin</buildtool_depend> 
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_manipulation</build_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>rospy</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>actionlib</build_depend> 
  <build_depend>tf</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>python</build_depend>

  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_warehouse</run_depend> 
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_manipulation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>actionlib</run_depend> 
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>python</run_depend>

</package>
